chore: Update .gitignore and add 'jsonrpc' to keywords in Cargo.toml

--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,7 @@ Cargo.lock
 
 # End of https://www.toptal.com/developers/gitignore/api/rust,visualstudiocode,jetbrains+all
 
+# Editor/backup artefacts
+*.orig
+*.bak
+*~
