--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 edition = "2021"
 authors = ["Breno A. <me@breno.tech>"]
 description = "Prometheus Model Context Protocol (MCP) Rust server"
-keywords = ["prometheus", "mcp", "observability", "metrics"]
+keywords = ["prometheus", "mcp", "observability", "metrics", "jsonrpc"]
 categories = ["command-line-utilities", "api-bindings", "network-programming", "web-programming::http-client"]
 readme = "README.md"
 license = "Apache-2.0"
@@ -12,17 +12,14 @@ repository = "https://github.com/brenoepics/prometheus-mcp"
 homepage = "https://github.com/brenoepics/prometheus-mcp"
 documentation = "https://docs.rs/prometheus-mcp"
 rust-version = "1.74"
-exclude = [
-    "target/**",
-    ".git/**",
-    ".github/**",
-    ".gitignore",
-    ".idea/**",
-    ".vscode/**",
-    "*.orig",
-    "**/*.orig",
-    "**/*.bak",
-    "**/*~",
+include = [
+  "Cargo.toml",
+  "README.md",
+  "LICENSE",
+  "src/**",
+  "docs/**",
+  "tests/**",
+  "examples/**",
 ]
 
 [badges]
