ci: Update minimum supported Rust version to 1.82 and add rust-toolchain.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ license = "Apache-2.0"
 repository = "https://github.com/brenoepics/prometheus-mcp"
 homepage = "https://github.com/brenoepics/prometheus-mcp"
 documentation = "https://docs.rs/prometheus-mcp"
-rust-version = "1.74"
+# Minimum supported Rust version (MSRV)
+rust-version = "1.82"
 include = [
   "Cargo.toml",
   "README.md",
