--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "prometheus-mcp"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2021"
 authors = ["Breno A. <me@breno.tech>"]
 description = "Prometheus Model Context Protocol (MCP) Rust server"
@@ -11,7 +11,6 @@ license = "Apache-2.0"
 repository = "https://github.com/brenoepics/prometheus-mcp"
 homepage = "https://github.com/brenoepics/prometheus-mcp"
 documentation = "https://docs.rs/prometheus-mcp"
-# Minimum supported Rust version (MSRV)
 rust-version = "1.82"
 include = [
   "Cargo.toml",
@@ -39,7 +38,10 @@ rpc-router = "0.1.3"
 maplit = "1"
 clap = { version = "4.5", features = ["derive", "env"] }
 prometheus = "0.14.0"
-hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
+hyper = { version = "1.7", features = ["http1", "server"] }
+hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
+http-body-util = "0.1"
+bytes = "1"
 reqwest = { version = "0.12.23", features = ["json"] }
 lazy_static = "1.4"
 async-trait = "0.1"
