--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,9 @@ on:
   release:
     types: [created]
 
+permissions:
+  contents: write
+
 jobs:
   release:
     name: release ${{ matrix.target }}
@@ -43,7 +46,7 @@ jobs:
       # macOS: native build and upload
       - name: Set up Rust 1.83.0 (macOS)
         if: matrix.os == 'macos-13'
-        uses: dtolnay/rust-toolchain@master
+        uses: dtolnay/rust-toolchain@6d653acede28d24f02e3cd41383119e8b1b35921
         with:
           toolchain: 1.83.0
 
