ci: update checkout steps to disable credential persistence across workflows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,8 @@ jobs:
             archive: zip
     steps:
       - uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4.3.0
+        with:
+          persist-credentials: false
 
       # Linux/Windows: use rust-build.action to compile and upload
       - name: Compile and upload (Linux/Windows)
